# spencer_people_tracking

./: .dockerignore  AUTHORS  LICENSE  README.md  tracks.yaml
.docker/: Makefile  (+1 more)
detection/laser_detectors/spencer_leg_detector_wrapper/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
detection/laser_detectors/srl_laser_detectors/: CHANGELOG.rst  CMakeLists.txt  package.xml
detection/spencer_detected_person_association/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
detection/spencer_detected_person_association/launch/: aggregate_all.launch  aggregate_high_recall_lasers.launch  aggregate_lasers.launch  aggregate_rgbd_ground_hog.launch  aggregate_rgbd_upper_body.launch  detection_to_detection_fusion_pipeline.launch  fuse_config.yaml  fuse_lasers_and_rgbd.launch  track_synchronizer.launch
detection/spencer_detected_person_association/scripts/: check_poses_and_covariances.py  composite_detections_to_detections.py  dump_detection_positions.py  track_synchronizer.py  track_synchronizer_test.py  visualize_composite_detections.py
detection/spencer_detected_person_association/srv/: LookupTrackId.srv  LookupTrackIds.srv
detection/spencer_detected_person_conversion/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
detection/spencer_detected_person_conversion/scripts/: detected_persons_to_pose_array.py  pose_array_to_detected_persons.py  position_measurement_array_to_detected_persons.py
detection/spencer_pose_array_conversion/: CMakeLists.txt  README.md  package.xml
detection/spencer_pose_array_conversion/scripts/: detected_persons_to_pose_array.py
launch/spencer_people_tracking_launch/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
launch/spencer_people_tracking_launch/launch/: tracking_on_bagfile.launch  tracking_on_robot.launch  tracking_single_rgbd_sensor.launch
launch/spencer_people_tracking_launch/rviz/: tracking-rgbd-laser.rviz  tracking-single-rgbd-sensor.rviz  visually-confirmed-tracks.rviz
launch/spencer_people_tracking_launch/scripts/: download_example_bagfiles.sh
messages/rwth_perception_people_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
messages/rwth_perception_people_msgs/msg/: AnnotatedFrame.msg  Annotation.msg  GroundHOGDetections.msg  PedestrianTracking.msg
messages/spencer_human_attribute_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
messages/spencer_tracking_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
messages/spencer_tracking_msgs/msg/: TrackIdentityAssociation.msg  TrackIdentityAssociations.msg  TrackedPerson.msg
simulation/spencer_perception_mocks/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
simulation/spencer_perception_mocks/launch/: all.launch  visualization.rviz
simulation/spencer_perception_mocks/scripts/: detected_and_tracked_persons.py  driving_robot.py  human_attributes.py  social_activities.py  social_relations.py  spokespersons.py  tracked_groups.py
tracking/spencer_social_relations/: CMakeLists.txt  package.xml
tracking/spencer_social_relations/cmake/: FindLibSVM.cmake
tracking/spencer_social_relations/scripts/: long_term_relations.py
tracking/spencer_tracking_utils/: CMakeLists.txt  package.xml
utils/rwth_ground_plane/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
utils/rwth_ground_plane/config/: config_Asus.inp
utils/rwth_ground_plane/launch/: ground_plane_estimated.launch  ground_plane_fixed.launch  ground_plane_really_fixed.launch  ground_plane_tf_based_fixed.launch
utils/rwth_ground_plane/src/: Camera.cpp  ConfigFile.cpp  Math.cpp  estimated_gp.cpp  groundplaneestimator.cpp  really_fixed_gp.cpp  tf_based_fixed_gp.cpp
utils/spencer_bagfile_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
utils/spencer_bagfile_tools/cfg/: ReconstructOdometry.cfg
utils/spencer_bagfile_tools/launch/: playback.launch  playback_from_robot.launch  playback_from_robot_demo.launch
utils/spencer_bagfile_tools/msg/: AdditionalOdometryData.msg
utils/spencer_bagfile_tools/scripts/: create_thumbnails.py  dump_encoder_values.py  dump_tf_frames.py  dump_timestamps.py  interpolate_odometry.py  odom_to_tf.py  play.py  plot_tf.py  postprocess_bagfile.py  reconstruct_odometry.py  replace_frames.py  shift_timestamps.py  speedup_bagfile.py  tf_filter.py  visualize_frustum.py  visualize_plane.py
utils/spencer_diagnostics/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
utils/spencer_diagnostics/launch/: diagnostic_aggregator.launch  diagnostic_analyzers.yaml
utils/spencer_diagnostics/scripts/: battery.py  cpu_monitor.py  hd_monitor.py  laptop_battery.py  ntp_monitor.py  nvidia_temp.py  sensors_monitor.py  tf_lookup_monitor.py  tf_monitor.py  topic_monitor.py
utils/spencer_people_tracking_full/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
utils/track_annotation_tool/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  rqt_plugin.xml  rviz_plugin.xml  setup.py
utils/track_annotation_tool/launch/: gui.launch  play.launch  track_annotation_tool.rviz
utils/track_annotation_tool/media/: flag.dae
utils/track_annotation_tool/saved_data/: README
utils/track_annotation_tool/scripts/: rqt_gui  simulator.py
utils/video_to_bagfile/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
visualization/spencer_tracking_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
visualization/spencer_tracking_rviz_plugin/scripts/: send_test_msgs.py
visualization/spencer_tracking_rviz_plugin/src/: additional_topic_subscriber.h  detected_persons_display.cpp  detected_persons_display.h  human_attributes_display.cpp  human_attributes_display.h  person_display_common.cpp  person_display_common.h  social_activities_display.cpp  social_activities_display.h  social_relations_display.cpp  social_relations_display.h  tracked_groups_display.cpp  tracked_groups_display.h  tracked_persons_cache.cpp  tracked_persons_cache.h  tracked_persons_display.cpp  tracked_persons_display.h
visualization/srl_tracking_exporter/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
(+631 files in other folders)
