<?xml version="1.0"?>
<package>
  <name>spencer_detected_person_association</name>
  <version>1.0.8</version>
  <description>
    Provides C++ nodelets for fusing spencer_tracking_msgs/DetectedPersons messages output
    by different detectors, associating detected persons with tracked persons, and associating persons detected by a
    single detector with fused detections in the form of spencer_tracking_msgs/CompositeDetectedPersons messages.
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>roslib</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>spencer_tracking_msgs</build_depend> 
  <build_depend>message_filters</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
