<?xml version="1.0"?>
<package>
  <name>spencer_pose_array_conversion</name>
  <version>1.0.0</version>
  <description>
    Converter scripts for converting spencer_tracking_msgs/DetectedPersons to geometry_msgs/PoseArray, and vice versa. 
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend> 
 
  <run_depend>rospy</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>

</package>
