<?xml version="1.0"?>
<package>

  <name>spencer_people_tracking_launch</name>
  <version>1.0.0</version>
  <description>
    Launch files for multi-modal people tracking on the SPENCER robot platform
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>
  <license>BSD</license>

  <author email="linder@cs.uni-freiburg.de">Timm Linder</author>
  <author>Stefan Breuers</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
