<?xml version="1.0"?>
<package>

  <name>spencer_people_tracking_launch</name>
  <version>1.3.1</version>
  <description>
    Launch files for multi-modal people tracking on the SPENCER robot platform
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>
  <license>BSD</license>

  <author email="linder@cs.uni-freiburg.de">Timm Linder</author>
  <author>Stefan Breuers</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslib</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>spencer_tracking_rviz_plugin</run_depend>
  <run_depend>srl_nearest_neighbor_tracker</run_depend>
  <run_depend>spencer_detected_person_association</run_depend>
  <!--<run_depend>jsk_rviz_plugins</run_depend>  not yet released in Noetic, see https://github.com/jsk-ros-pkg/jsk_visualization/issues/772 -->
  <run_depend>map_server</run_depend>
  <run_depend>openni2_launch</run_depend>
  
</package>
