<?xml version="1.0"?>
<package>
  <name>rwth_perception_people_msgs</name>
  <version>1.0.8</version>
  <description>The rwth_perception_people_msgs package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>BSD</license>

  <url type="website">http://www.vision.rwth-aachen.de/</url>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
  <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export/>
<build_depend>roslib</build_depend><run_depend>roslib</run_depend></package>
