<?xml version="1.0"?>
<package>

  <name>spencer_human_attribute_msgs</name>
  <version>1.0.1</version>
  <description>Messages used for Human Attribute Recognition</description>

  <maintainer email="linder@informatik.uni-freiburg.de">Timm Linder</maintainer>
  <author email="linder@informatik.uni-freiburg.de">Timm Linder</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
