<?xml version="1.0"?>
<package>
  <name>spencer_perception_mocks</name>
  <version>1.3.1</version>
  <description>
    Perception Mock components for SPENCER
  </description>

  <maintainer email="drmock@spencer.eu">Dr. Mock</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-scipy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>spencer_tracking_msgs</build_depend> 
  <build_depend>spencer_vision_msgs</build_depend>
  <build_depend>spencer_human_attribute_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>python3-numpy</run_depend>
  <run_depend>python3-scipy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>spencer_vision_msgs</run_depend>
  <run_depend>spencer_human_attribute_msgs</run_depend> 
  
</package>
