<?xml version="1.0"?>
<package>
  <name>rwth_ground_plane</name>
  <version>1.0.8</version>
  <description>The rwth_ground_plane package</description>

  <maintainer email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</maintainer>
  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>BSD</license>

  <url type="website">http://www.vision.rwth-aachen.de/</url>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
  <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rwth_perception_people_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>spencer_diagnostics</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rwth_perception_people_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>spencer_diagnostics</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export/>
<build_depend>roslib</build_depend><run_depend>roslib</run_depend></package>
